# django-morpholy

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  setup.cfg
